docs: apply plan review findings
Phase V ran seven adversarial lenses over the roadmap and attacked every
finding with an independent verifier; 58 of 72 survived. In parallel, ten
carried-forward UNVERIFIED items were settled by execution, each one also
adversarially re-checked -- all ten held, none disputed.

Two blockers, both invisible to CI, both now fixed in the plan:

- A6's dependency set produced a classpath with ZERO org/opencv classes.
  A classifier dep replaces the classifier-less artifact rather than
  adding to it, so E-2's "slim path works" was an unsupported conclusion
  from true evidence. Three coordinates per platform are required, and
  openblas's native jar must be declared explicitly. New 3.9, E-12.
- Nothing in A-G told a published consumer how to obtain natives. The
  POM ships classifier-free and the old Track G gate passed against
  exactly that POM. New consumer smoke test is now the highest-value
  item in Track G.

Corrections to claims this document previously asserted:

- 3.6 rewritten around GC invisibility, measured, rather than a false
  finalization claim; the "the reason scalacv exists" framing is dropped.
- 3.2's recipe gains per-OS name derivation, and highgui is now skipped
  by tolerating its failure -- name-excluding it breaks macOS, where the
  JNI shim hard-links it.
- 3.1's escape-hatch bisection was wrong: -Yscala-release never existed
  in any Scala 3 compiler. Conclusion unchanged.
- Core.VERSION is a compile-time constant, so Track A's gate passed with
  zero natives loaded. New E-13; gate now allocates a real Mat.
- Mill ignores JAVA_HOME and MILL_JVM_VERSION, so G1's JDK matrix was a
  no-op; the build JDK is now pinned in the header.

Ten settled items fold into the tracks: cascade extraction and its
Windows gap, Hough dtypes, the capitalized Imgproc names and imread's
three-way error surface, OpenJFX 21.0.12, mill-scalafix, VcsVersion,
mdoc wiring, and the macOS/Windows native-name split.

New section 8 records str